# mdlr

./: requirements.txt  setup.cfg
example/: __main__.py  model.py  train.py
mdlr/: cli.py  serialize.py  state.py  trainer.py  utils.py
mdlr/logging/: logger.py  logger_adapter.py  logger_types.py
mdlr/logging/adapters/: tensorboard_adapter.py
src/: size.py
src/logging/: __init__.py  logger.py  logger_adapter.py
