[metadata]
name = mdlr
version = 0.0.1
author = Aaron Levine
author_email = ald.levine@gmail.com
url = https://github.com/Aldlevine/mdlr.git
description = a library of pytorch training utilities providing high level organization and plumbing Yatt is yet another PyTorch trainer
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    matplotlib
    numpy
    tensorboard
    torch
    torchcontrib
    torchvision
    tqdm
    fyst @ git+https://github.com/Aldlevine/fyst.git@redesign

[options.package_data]
* = py.typed
